# DrvalEngine

./: CMakeLists.txt  main.cpp
Database/: instructors.txt  roomSubject.txt  subjects.txt
Model/: Groups.cpp  Groups.h  Hours.cpp  Hours.h  Instructors.cpp  Instructors.h  Leadings.cpp  Leadings.h  Occurences.cpp  Occurences.h  Plan.cpp  Plan.h  RoomSubject.cpp  RoomSubject.h  Rooms.cpp  Rooms.h  Subjects.cpp  Subjects.h
Utilities/: DrvalUtilities.cpp  DrvalUtilities.h  SuperUtilities.cpp  SuperUtilities.h
